--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li><a href="#bg-4">SEMANA PICHAU PRIME</a></li>
             <li><a href="#bg-5">FRETE FIXO</a></li>
             <li><a href="#card-carrossel">PRUUMOS EXCLUSIVAS</a></li>
-            <li><a href="#faq">VEH PRA PICHAU PRIME</a></li>
+            <li><a href="#faq">VEM PRA PICHAU PRIME</a></li>
             <li><a href="#faq">FAQ</a></li>
         </ul>
     </nav>
